# nextjs-geist-font-project

./: perusahaan_bekasi.csv
WebNewsScraper/WebNewsScraper/: .replit  articles_20250217_144704.json  articles_20250217_144830.json  articles_20250217_151201.json  articles_20250217_152034.json  articles_20250217_152946.json  articles_20250217_154658.json  articles_20250217_155508.json  articles_20250217_161312.json  articles_20250217_164624.json  articles_20250217_173403.json  articles_20250217_174208.json  articles_20250217_175006.json  articles_20250217_175501.json  articles_20250217_182216.json  articles_20250217_183952.json  articles_20250619_161441.json  articles_20250619_162349.json  articles_20250619_163230.json  articles_20250619_180612.json  articles_20250619_190754.json  articles_20250619_191603.json  articles_20250619_195155.json  articles_20250619_200024.json  articles_20250619_204836.json  bekasi_companies_20250619_161550.json  bekasi_companies_20250619_161610.json  bekasi_companies_20250619_161805.json  bekasi_companies_20250619_161849.json  bekasi_companies_20250619_161852.json  bekasi_companies_20250619_161906.json  bekasi_companies_20250619_161934.json  bekasi_companies_20250619_162800.json  bekasi_companies_csv_20250619_213223.json  bekasi_company_scraper.py  bekasi_viewer.py  config.py  csv_to_json.py  data_enricher.py  example_scraper.py  (+6 more)
WebNewsScraper/WebNewsScraper/.config/.semgrep/: settings.yml
WebNewsScraper/WebNewsScraper/attached_assets/: Nama_Perusahaan_dan_Alamat_Latest_1750362547337.csv  (+1 more)
