[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "beautifulsoup4>=4.13.3",
    "brotli>=1.1.0",
    "pandas>=2.3.0",
    "pymongo>=4.11.1",
    "pymysql>=1.1.1",
    "python-telegram-bot>=21.10",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "trafilatura>=2.0.0",
]
